Fix alignment of headings in lists

--- a/src/scss/modules/_content.scss
+++ b/src/scss/modules/_content.scss
@@ -38,6 +38,16 @@ main {
         text-align: center;
     }
 
+    li {
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            text-align: left;
+        }
+    }
+
     @media screen and (min-width: $md) {
         text-align: justify;
     }
